force-app/main/default/objects/Costo_Embarque__c/fields/Costo_Aerolinea__c.field-meta.xml
<CustomField>
    <fullName>Costo_Aerolinea__c</fullName>
    <formula>Peso_Total_Embarque__c * Tarifa_Aerolinea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Aerolinea</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>