force-app/main/default/objects/Costo_Embarque__c/fields/Costo_Flete__c.field-meta.xml
<CustomField>
    <fullName>Costo_Flete__c</fullName>
    <label>Costo Flete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>