force-app/main/default/objects/Costo_Embarque__c/fields/Peso_Total_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Peso_Total_Embarque__c</fullName>
    <label>Peso Total Embarque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>