force-app/main/default/objects/Costo_Embarque__c/fields/Tarifa_Aerolinea__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Aerolinea__c</fullName>
    <label>Tarifa Aerolínea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>